--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "cd client && npm run build",
-  "installCommand": "cd client && npm install",
+  "installCommand": "cd client && npm install --legacy-peer-deps",
   "outputDirectory": "client/dist",
   "framework": "vite"
 }
