--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@carbon/react": "^1.98.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@supabase/supabase-js": "^2.90.1",
     "d3": "^7.9.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
