--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@carbon/charts-react": "^1.27.2",
     "@carbon/icons-react": "^11.72.0",
     "@carbon/react": "^1.98.0",
+    "@msgpack/msgpack": "^3.1.3",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@supabase/supabase-js": "^2.90.1",
