chore(vercel): fix python backend deployment structure

--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,15 @@
   "outputDirectory": "client/dist",
   "framework": "vite",
   "functions": {
-    "api/**/*.py": {
+    "api/index.py": {
       "maxDuration": 60,
       "memory": 3008
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/index.py"
+    }
+  ]
 }
