--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,11 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.3
-aiosignal==1.4.0
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.1
-astropy==7.2.0
-astropy-iers-data==0.2026.1.5.0.43.43
-attrs==25.4.0
-cbor2==5.8.0
-certifi==2026.1.4
-click==8.3.1
-Cython==3.2.4
-Deprecated==1.3.1
 fastapi==0.128.0
-frozenlist==1.8.0
-gala==1.11.0
-grpclib==0.4.9
-h11==0.16.0
-h2==4.3.0
-hpack==4.1.0
-hyperframe==6.1.0
-idna==3.11
-limits==5.6.0
-markdown-it-py==4.0.0
-mdurl==0.1.2
-modal==1.3.0.post1
-msgpack==1.1.2
-multidict==6.7.0
-numpy==2.4.0
-packaging==25.0
-propcache==0.4.1
-protobuf==6.33.3
-pydantic==2.12.5
-pydantic_core==2.41.5
-pyerfa==2.0.1.5
-Pygments==2.19.2
-PyYAML==6.0.3
-rich==14.2.0
-scipy==1.16.3
-shellingham==1.5.4
-slowapi==0.1.9
-starlette==0.50.0
-synchronicity==0.11.1
-toml==0.10.2
-typer==0.21.1
-types-certifi==2021.10.8.3
-types-toml==0.10.8.20240310
-typing-inspection==0.4.2
-typing_extensions==4.15.0
 uvicorn==0.40.0
-watchfiles==1.1.1
-wrapt==2.0.1
-yarl==1.22.0
+numpy==2.4.0
+astropy==7.2.0
+gala==1.11.0
+scipy==1.16.3
+msgpack==1.1.2
+pydantic==2.12.5
+slowapi==0.1.9
+# Indirect dependencies will be installed automatically by pip, 
+# but pinned versions of heavy libs (numpy/scipy/astropy) enable caching.
