chore(deploy): add vercelignore and trust fluid compute

--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
   "framework": "vite",
   "functions": {
     "api/index.py": {
-      "maxDuration": 60,
-      "memory": 3008
+      "maxDuration": 60
     }
   },
   "rewrites": [
